--- a/css/index.css
+++ b/css/index.css
@@ -57,3 +57,8 @@ header{
     width: 100%;
     text-align: center;
 }
+
+table, tr, td{
+    border:solid 2px black;
+    border-collapse: collapse;
+}
